# token-data-provider-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
resources/: config.toml
src/: config.rs  main.rs
src/adapters/: mod.rs  token_api.rs
src/domain/entities/: mod.rs  protocol.rs  swap_log.rs  token.rs  token_pair.rs  update_log.rs
src/domain/entities/types/: date_time.rs
src/domain/services/: data_storage_service.rs  mod.rs
src/ports/chain/base/: base_uniswap_v2_client_service.rs  base_uniswap_v2_swap_sync.rs  mod.rs
