[package]
name = "token-data-provider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
config = "0.11"
once_cell = "1.10"
ethers = { version = "2.0", features = ["abigen"] }
warp = "0.3"
chrono = "0.4.38"

[[bin]]
name = "token_data_provider"
path = "src/main.rs"